# Rainbow-Porygon

./: .gitignore  .gitignore.bak  Makefile_pc  README.md
.github/workflows/: android-ci.yml  build.yml  build.yml.bak
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/pokeemerald/experimental/: GbaControlsView.java  PokeEmeraldActivity.java
android/patches/: sdl2-android-lifecycle.patch
data/: battle_anim_scripts.s
include/: global.h  global.h.bak  platform.h
include/gba/: defines.h  flash_internal.h  m4a_internal.h  macro.h  types.h
resources/: pokemon_emerald.rc
src/: agb_flash.c  bg.c  debug.c  decompress.c  field_name_box.c  hall_of_fame.c  hall_of_fame_frlg.c  intro.c  intro_frlg.c  librfu_rfu.c  m4a.c  m4a.c.bak  main.c  main.c.bak  malloc.c  multiboot.c  ow_abilities.c  player_pc.c  random.c  recorded_battle.c  reload_save.c  save.c  save.c.bak  siirtc.c  sound_mixer.c  stub.c  title_screen.c
src/platform/: bios.c  bios.c.bak  dma.c  dma.c.bak  gba_easy_draw.c  gba_fast_draw.c  sdl2.c
tools/preproc/: asm_file.cpp
